Modified accessibility changes for index.html & style.css file

--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
             <ul class="social-media-link">
                 <li class="social-icon">
                     <a href="#">
-                        <img src="./images/Vector-1.png" alt="Image missing">
+                        <img src="./images/Vector-1.png" alt="Vector-1">
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="#">
-                        <img src="./images/Linkedin icon.png" alt="Image missing">
+                        <img src="./images/Linkedin icon.png" alt="Linkedin">
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="#">
-                        <img src="./images/Vector.png" alt="Image missing">
+                        <img src="./images/Vector.png" alt="Vector">
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="#">
-                        <img src="./images/Vector.svg" alt="Image missing">
+                        <img src="./images/Vector.svg" alt="vectorr">
                     </a>
                 </li>
             </ul>
@@ -85,18 +85,18 @@
                     <h1 class="title">Tonic</h1>
                     <ul class="frame-2">
                         <li class="top-title">Canopy</li>
-                        <li class="details"><img src="./images/Counter.png" alt="Image missing"></li>
+                        <li class="details"><img src="./images/Counter.png" alt="Counter"></li>
                         <li class="details">Back End Dev</li>
-                        <li class="details"><img src="./images/Counter.png" alt="Image missing"></li>
+                        <li class="details"><img src="./images/Counter.png" alt="counter"></li>
                         <li class="details">2015</li>
                     </ul>
                     <p class="description">
                         A daily selection of privately personalized reads; no accounts or sign-ups required.
                     </p>
                     <ul class="tags">
-                        <li><a href="#"><img src="./images/Tag.png" alt="Image missing"></a></li>
-                        <li><a href="#"><img src="./images/Tag (1).png" alt="Image missing"></a></li>
-                        <li><a href="#"><img src="./images/Tag(2).png" alt="Image missing"></a></li>
+                        <li><a href="#"><img src="./images/Tag.png" alt="Tag"></a></li>
+                        <li><a href="#"><img src="./images/Tag (1).png" alt="tag1"></a></li>
+                        <li><a href="#"><img src="./images/Tag(2).png" alt="tag2"></a></li>
                     </ul>
                     <a href="#" class="more-button">See Project</a>
                 </div>
