Modified index.html file

--- a/index.html
+++ b/index.html
@@ -207,22 +207,22 @@
                     <ul class="social-media-link">
                         <li class="social-icon">
                             <a href="#">
-                                <img src="./images/Vector-1.png" alt="Image missing">
+                                <img src="./images/Vector-1.png" alt="VecTor-1">
                             </a>
                         </li>
                         <li class="social-icon">
                             <a href="#">
-                                <img src="./images/Linkedin icon.png" alt="Image missing">
+                                <img src="./images/Linkedin icon.png" alt="linkdin">
                             </a>
                         </li>
                         <li class="social-icon">
                             <a href="#">
-                                <img src="./images/Vector.png" alt="Image missing">
+                                <img src="./images/Vector.png" alt="VEctor">
                             </a>
                         </li>
                         <li class="social-icon">
                             <a href="#">
-                                <img src="./images/Vector.svg" alt="Image missing">
+                                <img src="./images/Vector.svg" alt="VeCtOr">
                             </a>
                         </li>
                     </ul>
