Modified index.html file

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <ul>
                         <li>
                             <span class="skills">
-                                Languages <span><img src="./images/Disabled.png" alt="languages"></span>
+                                Languages <span><img src="./images/Disabled.png" alt="Languagess"></span>
                             </span>
                             <ul class="skills-languages">
                                 <li class="add-skills">
