--- a/index.html
+++ b/index.html
@@ -279,15 +279,14 @@
                         project that needs coding. I’d love to help with it
                     </p>
                     <form action="https://formspree.io/f/mvoyeelg" class="contact-form" method="POST">
-
+                        <label for="name" >Full Name: </label>
                         <input name="name" id="name" type="text" placeholder="Alexandra Loremipsum" maxlength="30"
                             required>
-
-                        <input name="email" type="email" name="replyto" placeholder="alexandra@gmail.com" required>
-
+                        <label for="email" >Email address: </label>
+                        <input name="email" type="email" placeholder="alexandra@gmail.com" required>
+                        <label for="message">Enter a message: </label>
                         <textarea name="message" cols="30" rows="10" placeholder="Write your message here"
                             maxlength="500" required></textarea>
-
                         <button class="submit" type="submit" value="Send"> Get In Touch </button>
                     </form>
 
