Add title and h2 changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Portfolio</title>
+    <title>Michael's Portfolio</title>
 </head>
 
 <body>
@@ -255,12 +255,13 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="skills">Frameworks <span><img src="./images/Enabled.png" alt="frameworks"></span>
+                        <li class="skills">
+                            <h2>Frameworks</h2><span><img src="./images/Enabled.png" alt="frameworks"></span>
                         </li>
                         <li>
                             <hr class="line">
                         </li>
-                        <li class="skills">Skills <span><img src="./images/Enabled.png" alt="Skills"></span></li>
+                        <li class="skills"><h2>Skills</h2> <span><img src="./images/Enabled.png" alt="Skills"></span></li>
                         <li>
                             <hr class="line">
                         </li>
