Add JS code for Navbar toggler

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <nav class="navbar">
 
                 <div class="logo">My Logo</div>
-                <div class="bar-toggle">
+                <div class="bar-toggle" onclick="navToggle()">
                     <i class="fa fa-bars"></i>
 
                 </div>
-                <ul class="navbar-links">
+                <ul class="navbar-links" id="menus">
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
@@ -295,6 +295,7 @@
             </section>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
