--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <nav class="navbar">
 
                 <div class="logo">My Logo</div>
-                <div class="bar-toggle">
+                <div class ="bar-toggle" >
                     <i class="fa fa-bars"></i>
 
                 </div>
                 <ul class="navbar-links">
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" >About</a></li>
+                    <li><a href="#" >Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -295,6 +295,7 @@
             </section>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
