Update Menu Toggler

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <nav class="navbar">
 
-                <div class="logo">My Logo</div>
+                <div class="logo" id="logo">My Logo</div>
                 <div class="bar-toggle" onclick="navToggle()">
                     <i class="fa fa-bars"></i>
 
