--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
     <div class="container">
 
         <header>
-            <nav class="navbar">
+            <div class="navbar">
+            <div class="logo" id="logo">My Logo</div>
+            <div class="bar-toggle">
+                <div class="btn-line"></div>
+                <div class="btn-line"></div>
+                <div class="btn-line"></div>
 
-                <div class="logo" id="logo">My Logo</div>
-                <div class="bar-toggle" onclick="navToggle()">
-                    <i class="fa fa-bars"></i>
-
-                </div>
-                <ul class="navbar-links" id="menus">
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+            </div>
+            <nav class="menu">
+                <ul class="navbar-links">
+                    <li class="nav-item current" ><a href="#" class="nav-link">Portfolio</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
+        </div>
         </header>
 
         <!-- small-container -->
