--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </section>
         </div>
     </div>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
 </body>
 
 </html>
