--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
     <div class="container">
 
         <header>
-            <nav class="navbar">
+            <div class="navbar">
 
                 <div class="logo">My Logo</div>
                 <div class="bar-toggle">
-                    <i class="fa fa-bars"></i>
-
+                    <div class="btn-line"></div>
+                    <div class="btn-line"></div>
+                    <div class="btn-line"></div>
                 </div>
+                <nav class="menu">
                 <ul class="navbar-links">
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="nav-item current" ><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item " ><a href="#" class="nav-link">Portfolio</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
+            </div>
         </header>
 
         <!-- small-container -->
@@ -295,6 +299,7 @@
             </section>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
