--- a/index.html
+++ b/index.html
@@ -19,23 +19,22 @@
 
         <header>
             <div class="navbar">
-            <div class="logo" id="logo">My Logo</div>
-            <div class="bar-toggle">
-                <div class="btn-line"></div>
-                <div class="btn-line"></div>
-                <div class="btn-line"></div>
 
-            </div>
-            <nav class="menu">
+                <div class="logo">My Logo</div>
+                <div class="bar-toggle">
+                    <div class="btn-line"></div>
+                    <div class="btn-line"></div>
+                    <div class="btn-line"></div>
+                </div>
+                <nav class="menu">
                 <ul class="navbar-links">
-                    <li class="nav-item current" ><a href="#" class="nav-link">Portfolio</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    <li class="nav-item current" ><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item " ><a href="#" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
-        </div>
+            </div>
         </header>
 
         <!-- small-container -->
@@ -300,7 +299,7 @@
             </section>
         </div>
     </div>
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script>
 </body>
 
 </html>
