--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <nav class="menu">
                 <ul class="navbar-links">
                     <li class="nav-item current" ><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item " ><a href="#" class="nav-link">Portfolio</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    <li class="nav-item " ><a href="#work" class="nav-link">Portfolio</a></li>
+                    <li class="nav-item"><a href="#about-self" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
             </div>
@@ -78,7 +78,7 @@
 
 
         <!-- card-info -->
-        <section class="card-info">
+        <section class="card-info" id="work">
             <div class="card-item">
                 <div class="images-tags">
                     <a href="#">
@@ -194,7 +194,7 @@
         </section>
         <div class="about-contact">
             <!-- about myself -->
-            <section class="about">
+            <section class="about" id="about-self">
                 <div class="personal-info">
                     <h2>
                         About <br>
@@ -272,7 +272,7 @@
                 </div>
             </section>
             <!-- contact section -->
-            <section class="contact-me">
+            <section class="contact-me" id="contact">
                 <img class="eclipse" alt="Image missing">
                 <div class="content">
                     <h1>
