--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
 
         <header>
-            <div class="navbar">
+            
 
                 <div class="logo">My Logo</div>
                 <div class="bar-toggle">
@@ -28,13 +28,13 @@
                 </div>
                 <nav class="menu">
                 <ul class="navbar-links">
-                    <li class="nav-item current" ><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item current active" ><a href="#" class="nav-link">Home</a></li>
                     <li class="nav-item " ><a href="#work" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="#about-self" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
-            </div>
+    
         </header>
 
         <!-- small-container -->
