updates and changes

--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
     <div class="container">
 
         <header>
-            
 
-                <div class="logo">My Logo</div>
-                <div class="bar-toggle">
-                    <div class="btn-line"></div>
-                    <div class="btn-line"></div>
-                    <div class="btn-line"></div>
-                </div>
-                <nav class="menu">
+
+            <div class="logo">My Logo</div>
+            <div class="bar-toggle">
+                <div class="btn-line"></div>
+                <div class="btn-line"></div>
+                <div class="btn-line"></div>
+            </div>
+            <nav class="menu hidden ">
+                <a id='close-menu' href="javascript:void(0)">&times</a>
                 <ul class="navbar-links">
-                    <li class="nav-item current active" ><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item " ><a href="#work" class="nav-link">Portfolio</a></li>
-                    <li class="nav-item"><a href="#about-self" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+
+                    <li class="nav-item current active"><a href="#">Home</a></li>
+                    <li class="nav-item "><a href="#work">Portfolio</a></li>
+                    <li class="nav-item"><a href="#about-self">About</a></li>
+                    <li class="nav-item"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-    
+
         </header>
 
         <!-- small-container -->
