--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
 
 
-<section class="modal-pop" id="pop-up">
+<section class="modal-pop active id="pop-up">
         <div class="card-item-modal">
             <div class="main-text">
                 <div class="modal">
@@ -174,7 +174,8 @@
                         <li><a href="#"><img src="./images/Tag (1).png" alt="Image missing"></a></li>
                         <li><a href="#"><img src="./images/Tag(2).png" alt="Image missing"></a></li>
                     </ul>
-                    <a href="#" class="more-button">See Project</a>
+                    <a href="#" data-modal-target
+                    ="#pop-up"class="more-button">See Project</a>
                 </div>
             </div>
             <div class="card-item">
@@ -202,7 +203,8 @@
                         <li><a href="#"><img src="./images/Tag (1).png" alt="Image missing"></a></li>
                         <li><a href="#"><img src="./images/Tag(2).png" alt="Image missing"></a></li>
                     </ul>
-                    <a href="#" class="more-button">See Project</a>
+                    <a href="#" data-modal-target
+                    ="#pop-up"class="more-button">See Project</a>
                 </div>
             </div>
             <div class="card-item">
@@ -231,7 +233,8 @@
                         <li><a href="#"><img src="./images/Tag (1).png" alt="Image missing"></a></li>
                         <li><a href="#"><img src="./images/Tag(2).png" alt="Image missing"></a></li>
                     </ul>
-                    <a href="#" class="more-button-1">See Project</a>
+                    <a href="#"data-modal-target
+                    ="#pop-up" class="more-button-1">See Project</a>
                 </div>
             </div>
         </section>
