--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <input name="user_name" type="text" placeholder="Name" maxlength="30" required>
                     <input id="email" name="user_email" type="email" placeholder="Email" required>
                     <textarea name="message" cols="30" rows="10" placeholder="Write your message here" maxlength="500" required></textarea>
-                    <button type="submit">Get In Touch</button><span class="message">
+                    <button type="submit">Get In Touch</button><span class="message"> <span id="warning">&#9888;</span>Email Should be in lower case <br> <span id="innermsg">(Click Here!)</span></span>
                     <hr class="round">
                 </form>
             </div>
