--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                     If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it 
                 </p>
                 <form action="https://formspree.io/f/mvoyeelg" id="myform" class="my-form" method="post">
-                    <input name="user_name" type="text" placeholder="Name" maxlength="30" required>
+                    <input name="user_name" id="user"type="text" placeholder="Name" maxlength="30" required>
                     <input id="email" name="user_email" type="email" placeholder="Email" required>
-                    <textarea name="message" cols="30" rows="10" placeholder="Write your message here" maxlength="500" required></textarea>
+                    <textarea name="message" cols="30" id="text" rows="10" placeholder="Write your message here" maxlength="500" required></textarea>
                     <button type="submit">Get In Touch</button><span class="message"> <span id="warning">&#9888;</span>Email Should be in lower case <br> <span id="innermsg">(Click Here!)</span></span>
                     <hr class="round">
                 </form>
